mundial-backend/old/kubernetes_config_lb.yaml
---
  apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: fixture-backend-deployment
    labels:
      app: fixture-backend
  spec:
    replicas: 1
    selector:
      matchLabels:
        app: fixture-backend
    template:
      metadata:
        labels:
          app: fixture-backend
      spec:
        containers:
        - name: fixture-backend
          image: gcr.io/projectodemos/fixture_backend:1.0.2
          ports:
          - containerPort: 8080
          resources:
            requests:
              cpu: "120m"  
---
  apiVersion: v1
  kind: Service
  metadata:
    name: fixture-backend-service
    annotations:
      networking.gke.io/load-balancer-type: "Internal" 
    labels:
      app: fixture-backend 
  spec:    
    type: LoadBalancer
    selector:
      app: fixture-backend
    ports:
    - protocol: "TCP"
      port: 80
      targetPort: 8080
