mundial-backend/old/kubernetes_config copy.yaml
---
  apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: fixture-backend-deployment
    labels:
      app: fixture-backend
  spec:
    replicas: 1
    selector:
      matchLabels:
        app: fixture-backend
    template:
      metadata:
        labels:
          app: fixture-backend
          version: 1.0.0
      spec:
        containers:
        - name: fixture-backend
          image: gcr.io/projectodemos/fixture_backend:1.0.0
          ports:
          - containerPort: 5000
          resources:
            requests:
              cpu: "250m"  
---
  apiVersion: v1
  kind: Service
  metadata:
    name: fixture-backend-service
    labels:
      app: fixture-backend 
  spec:    
     type: NodePort
     selector:
        app: fixture-backend
     ports:
      - protocol: TCP
        port: 80
        targetPort: 5000 
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fixture-backend-ingress
  annotations:
    # If the class annotation is not specified it defaults to "gce".
    kubernetes.io/ingress.class: "gce"
spec:
      rules:
        - http:
            paths:
            - path: /*
              pathType: ImplementationSpecific
              backend:
                service:
                  name: fixture-backend
                  port:
                    number: 80
