mundial-backend/old/kubernetes_config.yaml
---
  apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: fixture-backend-deployment
    labels:
      app: fixture-backend
  spec:
    replicas: 1
    selector:
      matchLabels:
        app: fixture-backend
    template:
      metadata:
        labels:
          app: fixture-backend
      spec:
        serviceAccountName: k8sserviceaccount
        nodeSelector:
          iam.gke.io/gke-metadata-server-enabled: "true" 
        containers:
        - name: fixture-backend
          image: gcr.io/projectodemos/fixture_backend:1.0.2
          ports:
          - containerPort: 8080
          resources:
            requests:
              cpu: "100m"           
---
  apiVersion: v1
  kind: Service
  metadata:
    name: fixture-backend-svc
    annotations:
      cloud.google.com/neg: '{"ingress": true}'
    labels:
      app: fixture-backend
  spec:
    type: NodePort
    ports:
      - port: 80
        targetPort: 8080
    selector:
      app: fixture-backend              
---
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: fixture-backend-ingress
    annotations:   
      kubernetes.io/ingress.class: "gce"
  spec:
    defaultBackend:
      service:
        name: fixture-backend-svc
        port:
            number: 80
